View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028727 | Community | OCCT:Visualization | public | 2017-05-11 11:52 | 2018-03-20 12:43 |
Reporter | Max121 | Assigned To | abv | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028727: Visualization, AIS_RadiusDimension - fix misprint in AIS_RadiusDimension::IsValidAnchor() check | ||||
Description | There is an error in logic of method void AIS_RadiusDimension::SetMeasuredGeometry (const gp_Circ& theCircle, const gp_Pnt& theAnchorPoint), that is calling when you try to create AIS_RadiusDimension based on circle and anchor point. The problem occured in anchor validation. As you can see method "Standard_Boolean AIS_RadiusDimension::IsValidAnchor (const gp_Circ&, const gp_Pnt& theAnchor) const" returns "Abs (anAnchorDist - aRadius) > Precision::Confusion() && aCirclePlane.Contains (theAnchor, Precision::Confusion());". I think, it is clear that ancgor point can be placed on the circle, if Abs (anAnchorDist - aRadius) > Precision::Confusion(). So it shoulds be Abs (anAnchorDist - aRadius) "<" Precision::Confusion() for sure. | ||||
Steps To Reproduce | Try to create AIS_RadiusDimension based on circle and anchor point. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28727 has been created by kgv. SHA-1: b8d726bfd3624b532126a84dc6a10fdd2151014c Detailed log of new commits: Author: kgv Date: Tue May 16 12:05:06 2017 +0300 0028727: Visualization, AIS_RadiusDimension - fix misprint in AIS_RadiusDimension::IsValidAnchor() check |
|
Please test the patch. Test case is not needed (covered by existing tests after modifications). |
|
Dear BugMaster, Branch CR28727 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: b8d726bfd3624b532126a84dc6a10fdd2151014c Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1201 Regressions/Differences/Improvements: http://occt-tests/CR28727-master-OCCT/Debian70-64/bugs/vis/bug24351_3.html http://occt-tests/CR28727-master-OCCT/Windows-64-VC10/bugs/vis/bug24351_3.html bugs vis bug24351_3: FAILED http://occt-tests/CR28727-master-OCCT/Debian70-64/bugs/vis/bug24389.html http://occt-tests/CR28727-master-OCCT/Windows-64-VC10/bugs/vis/bug24389.html bugs vis bug24389: FAILED Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 91763018 / 91697349 [+0.07%] Total CPU difference: 19001.26000000034 / 18651.010000000362 [+1.88%] products component : Total MEMORY difference: 31329438 / 31317049 [+0.04%] Total CPU difference: 5431.699999999976 / 5416.239999999973 [+0.29%] Testing on Windows: occt component : Total MEMORY difference: 58425619 / 58426407 [-0.00%] Total CPU difference: 17539.254830398615 / 17338.309942298663 [+1.16%] products component : Total MEMORY difference: 22693835 / 22655560 [+0.17%] Total CPU difference: 5384.358914899969 / 5279.479442599965 [+1.99%] There are no differences in images found by testdiff. |
|
Dear kgv, Branch CR28727 has been rejected due to: - regressions/differences/improvements |
|
Branch CR28727 has been updated forcibly by kgv. SHA-1: 53080afa69f8f55cf190c454916475e55967a8b0 |
|
Please check corrected patch. |
|
Dear BugMaster, Branch CR28727 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 53080afa69f8f55cf190c454916475e55967a8b0 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1194 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 91862311 / 91709668 [+0.17%] Total CPU difference: 19001.62000000028 / 18652.11000000036 [+1.87%] products component : Total MEMORY difference: 31262948 / 31317049 [-0.17%] Total CPU difference: 5413.479999999982 / 5416.239999999973 [-0.05%] Testing on Windows: occt component : Total MEMORY difference: 58428089 / 58426407 [+0.00%] Total CPU difference: 18653.38277219859 / 17338.309942298663 [+7.58%] products component : Total MEMORY difference: 22693825 / 22655560 [+0.17%] Total CPU difference: 5482.826746099975 / 5279.479442599965 [+3.85%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR28727 is TESTED. |
|
Branch CR28727 has been deleted by kgv. SHA-1: 53080afa69f8f55cf190c454916475e55967a8b0 |
occt: master d29b2469 2017-05-16 09:05:06 Committer: abv Details Diff |
0028727: Visualization, AIS_RadiusDimension - fix misprint in AIS_RadiusDimension::IsValidAnchor() check |
Affected Issues 0028727 |
|
mod - src/AIS/AIS_RadiusDimension.cxx | Diff File | ||
mod - src/AIS/AIS_RadiusDimension.hxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_RelationCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-05-11 11:52 | Max121 | New Issue | |
2017-05-11 11:52 | Max121 | Assigned To | => kgv |
2017-05-16 12:04 | kgv | Severity | minor => trivial |
2017-05-16 12:04 | kgv | Target Version | => 7.2.0 |
2017-05-16 12:04 | kgv | Summary | Wrong logic in constructor of AIS_RadiusDimension => Visualization, AIS_RadiusDimension - fix misprint in AIS_RadiusDimension::IsValidAnchor() check |
2017-05-16 12:05 | git | Note Added: 0066129 | |
2017-05-16 12:05 | kgv | Note Added: 0066130 | |
2017-05-16 12:05 | kgv | Assigned To | kgv => bugmaster |
2017-05-16 12:05 | kgv | Status | new => resolved |
2017-05-16 12:06 | kgv | Status | resolved => reviewed |
2017-05-16 12:10 | kgv | Product Version | 7.1.0 => 6.7.0 |
2017-05-16 12:13 | kgv | Note Edited: 0066130 | |
2017-05-16 12:30 |
|
Assigned To | bugmaster => mkv |
2017-05-17 18:58 |
|
Note Added: 0066225 | |
2017-05-17 18:58 |
|
Note Added: 0066226 | |
2017-05-17 18:58 |
|
Assigned To | mkv => kgv |
2017-05-17 18:58 |
|
Status | reviewed => assigned |
2017-05-17 18:58 |
|
Test case number | => Not needed |
2017-05-17 19:48 | git | Note Added: 0066231 | |
2017-05-17 19:49 | kgv | Note Added: 0066232 | |
2017-05-17 19:49 | kgv | Assigned To | kgv => bugmaster |
2017-05-17 19:49 | kgv | Status | assigned => resolved |
2017-05-17 19:49 | kgv | Status | resolved => reviewed |
2017-05-17 20:17 |
|
Assigned To | bugmaster => mkv |
2017-05-18 14:22 |
|
Note Added: 0066265 | |
2017-05-18 14:22 |
|
Note Added: 0066266 | |
2017-05-18 14:22 |
|
Assigned To | mkv => bugmaster |
2017-05-18 14:22 |
|
Status | reviewed => tested |
2017-05-19 13:25 | abv | Changeset attached | => occt master d29b2469 |
2017-05-19 13:25 | abv | Assigned To | bugmaster => abv |
2017-05-19 13:25 | abv | Status | tested => verified |
2017-05-19 13:25 | abv | Resolution | open => fixed |
2017-05-29 16:06 | git | Note Added: 0066770 | |
2017-09-29 16:18 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |